--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.jboss.forge.addon</groupId>
    <artifactId>assertj</artifactId>
-   <version>3.6.2</version>
+   <version>3.6.3-SNAPSHOT</version>
    <developers>
       <developer>
          <id>gastaldi</id>
@@ -60,7 +60,7 @@
       <connection>scm:git:git://github.com/forge/assertj-addon.git</connection>
       <developerConnection>scm:git:git@github.com:forge/assertj-addon.git</developerConnection>
       <url>http://github.com/forge/assertj-addon</url>
-      <tag>3.6.2</tag>
+      <tag>HEAD</tag>
    </scm>
    <profiles>
       <profile>
